[package]
name = "advent21"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.5.11"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = [ "std", "env-filter" ] }
structopt = "0.3.25"
itertools = "0.10.1"
nom = "7.1.0"
nom-bitvec = "0.2.0"
bitvec = "0.22.3"
fnv = "1.0.7"
